# libqrc

./: CHANGELOG.md  CMakeLists.txt  README.md  package.xml  repolint.json
cmake/: qrc_udriverConfig.cmake.in
debian/: changelog  control  copyright  qcom-libqrc-dev.install  qcom-libqrc-udriver-dev.install  qcom-libqrc-udriver.install  qcom-libqrc.install
include/: qti_qrc_common.h
include/app_msg/: misc_msg.h
libqrc/: CMakeLists.txt  package.xml
libqrc-udriver/: CMakeLists.txt  package.xml
libqrc-udriver/debian/: changelog  control  copyright  qcom-libqrc-udriver-dev.install  qcom-libqrc-udriver.install  qcom-libqrc-udriver.postinst  ros-jazzy-qrc-udriver.install  rules
libqrc-udriver/include/: qti_qrc_udriver.h
libqrc-udriver/src/: qti_qrc_uart.c  qti_qrc_udriver.c
libqrc-udriver/test/: qti_qrc_test.c
libqrc/cmake/: libqrcConfig.cmake.in
libqrc/debian/: changelog  control  copyright  qcom-libqrc.install  rules
libqrc/include/app_msg/: charger_control_msg.h  client_control_msg.h  config_msg.h  emergency_msg.h  imu_msg.h  misc_msg.h  motion_msg.h  time_sync_msg.h
libqrc/include/module/: qrc_msg_management.h
libqrc/protocol/: qrc_msg_management.c
libqrc/protocol/qrc/: qrc.c  qrc_threadpool.c
libqrc/protocol/qrc/tinyframe/: TF_Config.h
libqrc/protocol/tinyframe/: TinyFrame.c  TinyFrame.h
protocol/qrc/: qrc.c  qrc.h
protocol/tinyframe/: TinyFrame.c
rules/: 99-qcom-qrc.rules
test/: qti_qrc_test.c
