<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libqrc</name>
  <version>0.0.0</version>
  <description>Qualcomm robotic communication library</description>
  <maintainer email="czhuang@qti.qualcomm.com">Canfeng Zhuang</maintainer>
  <license>BSD</license>

  <depend>qrc_udriver</depend>

</package>
