<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>libqrc</name>
  <version>1.1.1</version>
  <description>Qualcomm robotic communication library</description>
  <maintainer email="czhuang@qti.qualcomm.com">Canfeng Zhuang</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>qrc_udriver</depend>

</package>
